# fastapi-url-shortener

./: .dockerignore  .gitignore  .tool-versions  Dockerfile  Dockerfile.dev  Makefile  README.md  compose.yml  deploy_frontend_version.sh  fly.toml  loadtest.py  pyproject.toml
.github/workflows/: ci-cd.yml
app/: .env.example  config.py  db.py  dependencies.py  main.py  sentry.py  tasks.py
app/api/v1/: __init__.py  urls.py
app/api/v1/urls/: __init__.py  url_shortener.py
app/templates/: beforeswap.script.html  donation_success.html  form.html  home.html  index.html  toast.html
app/templates/partials/: base.html  form.html  meta.html  toast.html
app/views/: __init__.py  donation.py  utils.py
demo/: schema.puml
frontend/: .prettierrc.json  deploy_assets_version_to_s3.sh  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  prettierc.json  tailwind.config.mjs  tsconfig.json  vite.config.mts
frontend/src/: main.ts  style.css  types.ts  umami.ts
frontend/src/components/: form.ts  toast.ts
frontend/src/handlers/: htmx.beforeSwap.ts
templates/: index.html
tests/: conftest.py  db.py  test_api.py  test_dependencies.py  test_views.py
tests/views/: test_catchall_redirect.py  test_donation.py  test_homepage.py
