[tool.poetry]
name = "fastapi-url-shortener"
version = "0.1.0"
description = "URL Shortener"
authors = ["Alexey Vorobyov <alexey.vorobyov.s@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
toml-sort = "^0.23.1"
python-multipart = "^0.0.12"
jinja2 = "^3.1.4"
boto3 = {extras = ["dynamodb"], version = "^1.35.38"}
pydantic-settings = "^2.5.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
toml-sort = "^0.23.1"
bpython = "^0.24"
mypy-boto3-dynamodb = "^1.35.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
