[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Alexey Vorobyov <alexey.vorobyov.s@gmail.com>"]
description = "URL Shortener"
name = "fastapi-url-shortener"
package-mode = false
readme = "README.md"
version = "0.2.0"

[tool.poetry.dependencies]
boto3 = {extras = ["dynamodb"], version = "^1.35.38"}
fastapi = {extras = ["standard"], version = "^0.115.0"}
jinja2 = "^3.1.4"
pydantic-settings = "^2.5.2"
python = "~3.11"
python-multipart = "^0.0.12"
slowapi = "^0.1.9"
toml-sort = "^0.23.1"

[tool.poetry.group.dev.dependencies]
bpython = "^0.24"
moto = {extras = ["dynamodb"], version = "^5.0.18"}
mypy-boto3-dynamodb = "^1.35.24"
pytest = "^8.3.3"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"
ruff = "^0.6.9"
toml-sort = "^0.23.1"

[tool.pytest.ini_options]
addopts = [
    "--capture=no",  # ouputs print statements / db warnings(e.g. Integrity errors)
    "--maxfail=1",
    "--verbosity=1",
    "-p no:warnings",
]
env = [
    "AWS_REGION_NAME = eu-central-1",
    "DEBUG = True",
]

[tool.ruff]
line-length = 160
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "TID252",  # Prefer absolute imports over relative imports from parent modules
]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-local-folder = ["app"]

[tool.tomlsort]
all = true
in_place = true
sort_first = ["tool.poetry"]
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
